--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
