--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^16.12.0",
     "react-password-mask": "^3.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "serialize-javascript": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
